furbish index.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-<h1>Hello UME!</h1>
+<!DOCTYPE html>
+<html lang="jp" dir="ltr">
+    <head>
+        <title>スライド資料 - UME マーケティング部</title>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+    </head>
+    <body>
+        <h1>UME マーケティング部 スライド資料</h1>
+        <ul>
+            <li><a href="./">IS 研修資料</a></li>
+        </ul>
+
+    </body>
+</html>
