--- a/is_training/index.html
+++ b/is_training/index.html
@@ -6,10 +6,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
     <body>
-        <h1>UME マーケティング部 スライド資料</h1>
+        <h1>IS 研修資料</h1>
         <ul>
-            <li><a href="./is_training/index.html">IS 研修資料</a></li>
+            <li><a href="./">IS 研修 01 </a></li>
         </ul>
 
     </body>
 </html>
+
