--- a/is_training/index.html
+++ b/is_training/index.html
@@ -8,7 +8,7 @@
     <body>
         <h1>IS 研修資料</h1>
         <ul>
-            <li><a href="./">IS 研修 01 </a></li>
+            <li><a href="./01/index.html">IS 対応マニュアル 01 一次対応</a></li>
         </ul>
 
     </body>
