--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <h1>UME マーケティング部 スライド資料</h1>
         <ul>
             <li><a href="./is_training/index.html">IS 研修資料</a></li>
+            <li><a href="./new_teams/index.html">マーケ部新体制 説明書</a></li>
         </ul>
 
     </body>
