add onboarding offline-gathering payment

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         <ul>
             <li><a href="./is_training/index.html">IS 研修資料</a></li>
             <li><a href="./new_teams/index.html">マーケ部新体制 説明書</a></li>
+            <li><a href="./offline_gathering/index.html">マーケ東京集会 2024.10</a></li>
+            <li><a href="./onboarding/index.html">マーケ部研修</a></li>
+            <li><a href="./payment/index.html">支払い・経費処理方法</a></li>
         </ul>
 
     </body>
