--- a/is_training/index.html
+++ b/is_training/index.html
@@ -9,7 +9,7 @@
         <h1>IS 研修資料</h1>
         <ul>
             <li><a href="./01/index.html">IS 対応マニュアル 01 一次対応</a></li>
-            <li><a href="./02/index.html">IS 対応マニュアル 02 追客対応</a></li>
+            <li><a href="./02_2/index.html">IS 対応マニュアル 02 追客対応</a></li>
             <li><a href="./03/index.html">IS 対応マニュアル 03 FS 引き継ぎ</a></li>
             <li><a href="./04/index.html">IS 対応マニュアル 04 電話対応</a></li>
         </ul>
