--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <li><a href="./offline_gathering/index.html">マーケ東京集会 2024.10</a></li>
             <li><a href="./onboarding/index.html">マーケ部研修</a></li>
             <li><a href="./payment/index.html">支払い・経費処理方法</a></li>
+            <li><a href= "./goals/ipros/index.html">イプロス効果検証、目標設定、改善</a></li>
         </ul>
 
     </body>
