--- a/is_training/index.html
+++ b/is_training/index.html
@@ -12,6 +12,7 @@
             <li><a href="./02_2/index.html">IS 対応マニュアル 02 追客対応</a></li>
             <li><a href="./03/index.html">IS 対応マニュアル 03 FS 引き継ぎ</a></li>
             <li><a href="./04/index.html">IS 対応マニュアル 04 電話対応</a></li>
+            <li><a href="./05/index.html">IS 対応マニュアル 05 施工診断</a></li>
         </ul>
     </body>
 </html>
